--- a/templates/projeto/base/base.html
+++ b/templates/projeto/base/base.html
@@ -16,6 +16,7 @@
             <a href="{% url 'secretario_listagem' %}">Secretário</a>
             <a href="{% url 'professor_listagem' %}">Professor</a>
             <a href="{% url 'aluno_listagem' %}">Aluno</a>
+            <a href="{% url 'ano_listagem' %}">Ano Letivo</a>
             <a href="{% url 'logout' %}">Encessar Sessão</a>
             {{ user.username }}
         {% endif %}
