--- a/gestaoEscolar/templates/gestaoEscolar/bimestre/bimestre_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/bimestre/bimestre_form.html
@@ -2,13 +2,13 @@
 
 {% block title %}
     {% if Tipo_Transacao == 'INS' %}
-        Cadastrar novo Ano Letivo | GEscolar 
+        Cadastrar novo Bimestre | GEscolar 
     {% elif Tipo_Transacao == 'UPD' %}
-        Alterar Ano Letivo | GEscolar 
+        Alterar Bimestre | GEscolar 
     {% elif Tipo_Transacao == 'CON' %}
-        Consultar Ano Letivo | GEscolar
+        Consultar Bimestre | GEscolar
     {% elif Tipo_Transacao == 'DEL' %}
-        Apagar Ano Letivo | GEscolar
+        Apagar Bimestre | GEscolar
     {% endif %}
 {% endblock  %}
 
@@ -16,13 +16,13 @@
 {% block main %}
 
     {% if Tipo_Transacao == 'INS' %}
-        <h2>Cadastrar Ano Letivo</h2> 
+        <h2>Cadastrar Bimestre</h2> 
     {% elif Tipo_Transacao == 'UPD' %}
-        <h2>Atualizar dados do Ano Letivo</h2> 
+        <h2>Atualizar dados do Bimestre</h2> 
     {% elif Tipo_Transacao == 'CON' %}
-        <h2>Consultar Ano Letivo</h2> 
+        <h2>Consultar Bimestre</h2> 
     {% elif Tipo_Transacao == 'DEL' %}
-        <h2>Apagar Ano Letivo</h2>
+        <h2>Apagar Bimestre</h2>
     {% endif %}
 
     {% for erro in erros %}
@@ -31,37 +31,36 @@
 
     <form action="
             {% if Tipo_Transacao == 'INS' %}
-                {% url 'ano_novo' %}
+                {% url 'bimestre_novo' idA %}
             {% elif Tipo_Transacao == 'UPD' %}
-                {% url 'ano_alterar' idAno %}
+                {% url 'bimestre_alterar' idA idBimestre %}
             {% elif Tipo_Transacao == 'CON' %}
-                {% url 'ano_consultar' idAno %}
+                {% url 'bimestre_consultar' idA idBimestre %}
             {% elif Tipo_Transacao == 'DEL' %}
-                {% url 'ano_deletar' idAno %}
+                {% url 'bimestre_deletar' idA idBimestre %}
             {% endif %}
         " method="POST">
         {% csrf_token %}
 
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
+
             <fieldset>
                 {% if Tipo_Transacao == 'INS' %}
                     <div>
-                        <label for="id_Ano">Ano:</label>
-                        <input type="number" name="Ano" min="0" required id="id_Ano" value='{{ ano_dados.Ano }}'>
+                        <label for="id_AnoLetivo">Ano:</label> 
+                        <input type="number" name="AnoLetivo" min="0" max="4" disabled id="id_AnoLetivo" value='{{ ano.Ano }}'>
                     </div>
-                {% else %}
-                    <div>
-                        <label for="id_Ano">Ano:</label>
-                        <input type="number" name="Ano" min="0" disabled required id="id_Ano" value='{{ ano_dados.Ano }}'>
-                    </div>
-                {% endif %}
 
-                {% if Tipo_Transacao == 'INS' %}
+                    <div>
+                        <label for="id_Bimestre">Bimestre:</label>
+                        <input type="number" name="Bimestre" min="0" max="4" required id="id_Bimestre" value='{{ bimestre_dados.Bimestre }}'>
+                    </div>
+
                     <div>
                         <label for="id_Situacao">Situação:</label> 
                         <select name="Situacao" id="id_Situacao" disabled>
                             {% for situacao in Tipos_Situacao %}
-                                {% if ano_dados.Situacao == situacao.0 %}
+                                {% if bimestre_dados.Situacao == situacao.0 %}
                                     <option value="{{ situacao.0 }}" selected>{{ situacao.1 }}</option>
                                 {% else %}
                                     <option value="{{ situacao.0 }}" >{{ situacao.1 }}</option>
@@ -71,10 +70,20 @@
                     </div>
                 {% else %}
                     <div>
+                        <label for="id_AnoLetivo">Ano:</label> 
+                        <input type="number" name="AnoLetivo" min="0" max="4" disabled id="id_AnoLetivo" value='{{ bimestre_dados.AnoLetivo }}'>
+                    </div>
+
+                    <div>
+                        <label for="id_Bimestre">Bimestre:</label>
+                        <input type="number" name="Bimestre" min="0" max="4" disabled id="id_Bimestre" value='{{ bimestre_dados.Bimestre }}'>
+                    </div>
+
+                    <div>
                         <label for="id_Situacao">Situação:</label> 
                         <select name="Situacao" id="id_Situacao">
                             {% for situacao in Tipos_Situacao %}
-                                {% if ano_dados.Situacao == situacao.0 %}
+                                {% if bimestre_dados.Situacao == situacao.0 %}
                                     <option value="{{ situacao.0 }}" selected>{{ situacao.1 }}</option>
                                 {% else %}
                                     <option value="{{ situacao.0 }}" >{{ situacao.1 }}</option>
@@ -84,33 +93,40 @@
                     </div>
                 {% endif %}
 
-
-
-
                 <div>
                     <label for="id_Data_Inicio">Data Inicial:</label> 
-                    <input type="date" name="Data_Inicio" required id="id_Data_Inicio" value='{{ ano_dados.Data_Inicio|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Inicio" required id="id_Data_Inicio" value='{{ bimestre_dados.Data_Inicio|date:"Y-m-d" }}'>
+                </div>
+
+                <div>
+                    <label for="id_Data_Limite_Notas">Data limite da entrega das notas:</label> 
+                    <input type="date" name="Data_Limite_Notas" required id="id_Data_Limite_Notas" value='{{ bimestre_dados.Data_Limite_Notas|date:"Y-m-d" }}'>
                 </div>
 
                 <div>
                     <label for="id_Data_Fim">Data Final:</label> 
-                    <input type="date" name="Data_Fim" required id="id_Data_Fim" value='{{ ano_dados.Data_Fim|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Fim" required id="id_Data_Fim" value='{{ bimestre_dados.Data_Fim|date:"Y-m-d" }}'>
                 </div>
             </fieldset>
 
         {% else %}
-
+        
             <fieldset>
                 <div>
-                    <label for="id_Ano">Número:</label>
-                    <input type="number" name="Ano" min="0" disabled required id="id_Ano" value='{{ ano_dados.Ano }}'>
+                    <label for="id_AnoLetivo">Ano:</label> 
+                    <input type="number" name="AnoLetivo" min="0" max="4" disabled id="id_AnoLetivo" value='{{ bimestre_dados.AnoLetivo }}'>
+                </div>
+
+                <div>
+                    <label for="id_Bimestre">Bimestre:</label>
+                    <input type="number" name="Bimestre" min="0" max="4" disabled id="id_Bimestre" value='{{ bimestre_dados.Bimestre }}'>
                 </div>
 
                 <div>
                     <label for="id_Situacao">Situação:</label> 
                     <select name="Situacao" id="id_Situacao" disabled>
                         {% for situacao in Tipos_Situacao %}
-                            {% if ano_dados.Situacao == situacao.0 %}
+                            {% if bimestre_dados.Situacao == situacao.0 %}
                                 <option value="{{ situacao.0 }}" selected>{{ situacao.1 }}</option>
                             {% else %}
                                 <option value="{{ situacao.0 }}" >{{ situacao.1 }}</option>
@@ -118,17 +134,23 @@
                         {% endfor %}       
                     </select>
                 </div>
-            
+
                 <div>
                     <label for="id_Data_Inicio">Data Inicial:</label> 
-                    <input type="date" name="Data_Inicio" disabled required id="id_Data_Inicio" value='{{ ano_dados.Data_Inicio|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Inicio" disabled id="id_Data_Inicio" value='{{ bimestre_dados.Data_Inicio|date:"Y-m-d" }}'>
+                </div>
+
+                <div>
+                    <label for="id_Data_Limite_Notas">Data limite da entrega das notas:</label> 
+                    <input type="date" name="Data_Limite_Notas" disabled id="id_Data_Limite_Notas" value='{{ bimestre_dados.Data_Limite_Notas|date:"Y-m-d" }}'>
                 </div>
 
                 <div>
                     <label for="id_Data_Fim">Data Final:</label> 
-                    <input type="date" name="Data_Fim" disabled required id="id_Data_Fim" value='{{ ano_dados.Data_Fim|date:"Y-m-d" }}'>
+                    <input type="date" name="Data_Fim" disabled id="id_Data_Fim" value='{{ bimestre_dados.Data_Fim|date:"Y-m-d" }}'>
                 </div>
             </fieldset>
+
 
         {% endif %}
 
@@ -138,7 +160,7 @@
             <button type="submit">Deletar</button>
         {% endif %}
 
-        <a href="{% url 'ano_listagem' %}"> Voltar</a>
+        <a href="{% url 'bimestre_listagem' ano.id %}"> Voltar</a>
     </form>
 
 {% endblock  %}
