Criando o cadastro de disciplina

--- a/templates/projeto/base/base.html
+++ b/templates/projeto/base/base.html
@@ -17,6 +17,7 @@
             <a href="{% url 'professor_listagem' %}">Professor</a>
             <a href="{% url 'aluno_listagem' %}">Aluno</a>
             <a href="{% url 'ano_listagem' %}">Ano Letivo</a>
+            <a href="{% url 'disciplina_listagem' %}">Disciplina</a>
             <a href="{% url 'logout' %}">Encessar Sessão</a>
             {{ user.username }}
         {% endif %}
