--- a/templates/projeto/base/base.html
+++ b/templates/projeto/base/base.html
@@ -18,6 +18,7 @@
             <a href="{% url 'aluno_listagem' %}">Aluno</a>
             <a href="{% url 'ano_listagem' %}">Ano Letivo</a>
             <a href="{% url 'disciplina_listagem' %}">Disciplina</a>
+            <a href="{% url 'turma_listagem' %}">Turma</a>
             <a href="{% url 'logout' %}">Encessar Sessão</a>
             {{ user.username }}
         {% endif %}
