--- a/gestaoEscolar/templates/gestaoEscolar/serie/serie_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/serie/serie_listagem.html
@@ -25,7 +25,7 @@
                         {% elif serie.Nivel_Escolaridade == 'M' %}
                             <th>Médio</th>
                         {% endif  %}
-                        <th><a href="{% url 'matrizItem_listagem' serie.id %}">X</a></th>
+                        <th><a href="{% url 'matriz_item_listagem' serie.id %}">X</a></th>
                     </tr>
                 {% else %}
                     <tr>
