Criando o metodo de gerar bimestres para criar automaticamento o numero dos bimestres de um ano letivo

--- a/gestaoEscolar/templates/gestaoEscolar/bimestre/bimestre_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/bimestre/bimestre_form.html
@@ -53,7 +53,7 @@
 
                     <div>
                         <label for="id_Bimestre">Bimestre:</label>
-                        <input type="number" name="Bimestre" min="0" max="4" required id="id_Bimestre" value='{{ bimestre_dados.Bimestre }}'>
+                        <input type="number" name="Bimestre" min="0" max="4" disabled id="id_Bimestre" value='{{ numero_bimestre }}'>
                     </div>
 
                     <div>
