--- a/gestaoEscolar/templates/gestaoEscolar/turma/turma_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/turma/turma_form.html
@@ -45,8 +45,8 @@
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
             <fieldset>
                 <div>
-                    <label for="id_Nome">Nome:</label>
-                    <input type="text" name="Nome" maxlength="20" required id="id_Nome" value='{{ turma_dados.Nome }}'>
+                    <label for="id_Nome">Nome (A,B,C):</label>
+                    <input type="text" name="Nome" maxlength="1" required id="id_Nome" value='{{ turma_dados.Nome }}'>
                 </div>
 
                 <div>
@@ -62,14 +62,15 @@
                     </select>
                 </div>
 
+                <!-- Parei aqui  -->
                 <div>
-                    <label for="id_Nivel_Escolaridade">Nível de escolaridade:</label>     
-                    <select name="Nivel_Escolaridade" id="id_Nivel_Escolaridade">
+                    <label for="id_Serie">Série:</label>     
+                    <select name="Serie" id="id_Serie">
                         {% for nivel in Niveis_Escolaridade %}
-                            {% if turma_dados.Nivel_Escolaridade == nivel.0 %}
-                                <option value="{{ nivel.0 }}" selected>{{ nivel.1 }}</option>
+                            {% if turma_dados.Serie == serie.id %}
+                                <option value="{{ serie.id }}" selected>{{ serie.Numero }}</option>
                             {% else %}
-                                <option value="{{ nivel.0 }}" >{{ nivel.1 }}</option>
+                                <option value="{{ serie.id }}" >{{ serie.Numero }}</option>
                             {% endif %}
                         {% endfor %}       
                     </select>
@@ -94,54 +95,9 @@
             </fieldset>
 
         {% else %}
-            <fieldset>
-                <div>
-                    <label for="id_Nome">Nome:</label>
-                    <input type="text" name="Nome" maxlength="20" disabled id="id_Nome" value='{{ turma_dados.Nome }}'>
-                </div>
-
-                <div>
-                    <label for="id_Periodo">Período:</label>     
-                    <select name="Periodo" id="id_Periodo" disabled>
-                        {% for periodo in Tipo_Periodo %}
-                            {% if turma_dados.Periodo == periodo.0 %}
-                                <option value="{{ periodo.0 }}" selected>{{ periodo.1 }}</option>
-                            {% else %}
-                                <option value="{{ periodo.0 }}" >{{ periodo.1 }}</option>
-                            {% endif %}
-                        {% endfor %}       
-                    </select>
-                </div>
-
-                <div>
-                    <label for="id_Nivel_Escolaridade">Nível de escolaridade:</label>     
-                    <select name="Nivel_Escolaridade" id="id_Nivel_Escolaridade" disabled>
-                        {% for nivel in Niveis_Escolaridade %}
-                            {% if turma_dados.Nivel_Escolaridade == nivel.0 %}
-                                <option value="{{ nivel.0 }}" selected>{{ nivel.1 }}</option>
-                            {% else %}
-                                <option value="{{ nivel.0 }}" >{{ nivel.1 }}</option>
-                            {% endif %}
-                        {% endfor %}       
-                    </select>
-                </div>
-
-                <div>
-                    <label for="id_Max_Alunos">Número da sala:</label>
-                    <input type="number" name="Sala" min="0" max="4294967295" disabled id="id_Sala" value='{{ turma_dados.Sala }}'>
-                </div>
-
-                <div>
-                    <label for="id_Max_Alunos">Capacidade de alunos:</label>
-                    <input type="number" name="Max_Alunos" min="0" max="4294967295" disabled id="id_Max_Alunos" value='{{ turma_dados.Max_Alunos }}'>
-                </div>
-                
-                <div>
-                    <label for="id_AnoLetivo">Ano:</label>
-                    <input type="text" name="AnoLetivo" min="0" max="4294967295" disabled id="id_AnoLetivo" value='{{ turma_dados.AnoLetivo }}'>
-                </div>
             
-            </fieldset>
+
+
         {% endif %}
 
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
